Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-15784

md echo should don't panic with remote object

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: Minor Minor
    • Lustre 2.16.0
    • None
    • None
    • 3
    • 9223372036854775807

      md-echo should don't panic with run on second's MDT.

      let's return error in this case.

      bug easy replicated with

      lctl attach echo_client ec ec_uuid
      lctl --device ec setup lustre-MDT0001 mdd
      lctl --device ec test_mkdir /tt

            shadow Alexey Lyashkov
            shadow Alexey Lyashkov
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved: