LU-15784 obdecho: don't panic with run on second mdt

obdecho should correctly return errors in error situations:
1. connected to devices other than mdd due structure differences.
2. run an operations against of remote objects.

HPe-bug-id: LUS-10913
Signed-off-by: Alexey Lyashkov <alexey.lyashkov@hpe.com>
Change-Id: I11c524f205533287a9b5724419741dfbad508d29
Reviewed-on: https://review.whamcloud.com/c/fs/lustre-release/+/47147
Tested-by: jenkins <devops@whamcloud.com>
Tested-by: Maloo <maloo@whamcloud.com>
Reviewed-by: Andreas Dilger <adilger@whamcloud.com>
Reviewed-by: Andrew Perepechko <andrew.perepechko@hpe.com>
Reviewed-by: Oleg Drokin <green@whamcloud.com>